cambios en diseño resposibe, imagenes y css

--- a/html/historia/img360.html
+++ b/html/historia/img360.html
@@ -28,7 +28,7 @@
   <body>
     <!-- INICIO Galería de imagenes 360º -->
     <div id="ocultar-galeria" class="flex_container">
-      <section class="container_info container_cards">
+      <section class="container_cards">
         <div class="container_button">
           <button class="lang fw-bolder" onclick="history.back()">
             Atrás
@@ -40,7 +40,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col mb-5">
-                <div class="card bg-transparent border-0 card_wh">
+                <div class="card bg-transparent border-0">
                   <img
                     id="1"
                     src="../../media/Laskorain_HH3_1Solairua_EsperientziaTxokoa1_11.jpeg"
@@ -55,7 +55,7 @@
                 </div>
               </div>
               <div class="col mb-5">
-                <div class="card bg-transparent border-0 card_wh">
+                <div class="card bg-transparent border-0">
                   <img
                     id="2"
                     src="../../media/Laskorain_HH4_1Solairua_Zentzumen_Txokoa1_29.jpeg"
@@ -70,7 +70,7 @@
                 </div>
               </div>
               <div class="col mb-5">
-                <div class="card bg-transparent border-0 card_wh">
+                <div class="card bg-transparent border-0">
                   <img
                     id="3"
                     src="../../media/02_Jose_Arana.jpeg"
@@ -85,7 +85,7 @@
                 </div>
               </div>
               <div class="col mb-5">
-                <div class="card bg-transparent border-0 card_wh">
+                <div class="card bg-transparent border-0">
                   <img
                     src="../../media/15_Jose_Arana.jpeg"
                     class="card-img-top rounded-top change"
@@ -99,7 +99,7 @@
                 </div>
               </div>
               <div class="col mb-5">
-                <div class="card bg-transparent border-0 card_wh">
+                <div class="card bg-transparent border-0">
                   <img
                     src="../../media/20_Jose_Arana.jpeg"
                     class="card-img-top rounded-top change"
@@ -113,7 +113,7 @@
                 </div>
               </div>
               <div class="col mb-5">
-                <div class="card bg-transparent border-0 card_wh">
+                <div class="card bg-transparent border-0">
                   <img
                     src="../../media/Laskorain_HH3_1Solairua_EsperientziaTxokoa1_11.jpeg"
                     class="card-img-top rounded-top change"
@@ -127,7 +127,7 @@
                 </div>
               </div>
               <div class="col mb-5">
-                <div class="card bg-transparent border-0 card_wh">
+                <div class="card bg-transparent border-0">
                   <img
                     src="../../media/Laskorain_HH4_1Solairua_Zentzumen_Txokoa1_29.jpeg"
                     class="card-img-top rounded-top change"
@@ -141,7 +141,7 @@
                 </div>
               </div>
               <div class="col mb-5">
-                <div class="card bg-transparent border-0 card_wh">
+                <div class="card bg-transparent border-0">
                   <img
                     src="../../media/02_Jose_Arana.jpeg"
                     class="card-img-top rounded-top change"
@@ -155,7 +155,7 @@
                 </div>
               </div>
               <div class="col mb-5">
-                <div class="card bg-transparent border-0 card_wh">
+                <div class="card bg-transparent border-0">
                   <img
                     src="../../media/15_Jose_Arana.jpeg"
                     class="card-img-top rounded-top change"
@@ -174,12 +174,12 @@
       </section>
     </div>
     <!-- INICIO Panel de imágenes 360º -->
-    <div id="activar-vista-360" class="flex_container">
+    <div id="activar-vista-360">
       <section
-        class="container_info container_img_360 bg-transparent pe-5 ps-5"
+        class="container_img_360"
       >
         <div class="container_button">
-          <button class="lang fs-4 fw-bolder" onclick="returnGaleria()">
+          <button class="lang fw-bolder" onclick="returnGaleria()">
             Atrás
           </button>
         </div>
