--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,9 @@
     <!--Panel principal-->
     <div class="flex_container">
         <section class="container_info">
-            <button class="lang fw-bolder">Idioma</button>
+            <div class="container_button">
+                <button class="lang fw-bolder">Idioma</button>
+            </div>
             <article class="img-fondo">
                 <img src="../media/img-ejemplo.jpg" alt="">
             </article>
