--- a/html/mandubi/img360.html
+++ b/html/mandubi/img360.html
@@ -16,9 +16,9 @@
 <body>
     <!-- INICIO Panel de imágenes 360º -->
     <div class="flex_container">
-        <section class="container_info container_img_360 bg-transparent pe-5 ps-5">
+        <section class="container_img_360">
             <div class="container_button">
-                <button class="lang fs-5 fw-bolder" onclick="history.back()">Atrás</button>
+                <button class="lang fw-bolder" onclick="history.back()">Atrás</button>
             </div>
             <a-scene>
                 <a-sky   
