--- a/html/mandubi/mandubi.html
+++ b/html/mandubi/mandubi.html
@@ -28,7 +28,7 @@
                 <p class="fs-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
                     nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
                     magni, id enim! Consectetur delectus quis aspernatur?</p>
-                <img class="img_float" src="#" alt="dolmen de Mandubi">
+                <img class="img_float" src="../../media/dolmen-3.jpg" alt="dolmen de Mandubi">
                 <p class="fs-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum fugit cupiditate, 
                     nesciunt quis sunt aliquid vel, nisi earum non amet laudantium consectetur quaerat 
                     magni, id enim! Consectetur delectus quis aspernatur?</p>
