--- a/html/historia/mapa-dolmenes.html
+++ b/html/historia/mapa-dolmenes.html
@@ -1,39 +1,58 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mandubi Trikuharria</title>
-    <link rel="stylesheet" href="../../css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="../../css/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
     <!-- fuentes de google -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&family=Roboto:wght@500&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&family=Roboto:wght@500&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <!-- Panel mapa de los dólmenes -->
     <div class="flex_container">
-        <section class="container_info">
-            <div class="container_button">
-                <button class="lang fs-5 fw-bolder" onclick="history.back()">Atrás</button>
-                <button class="lang fs-5 fw-bolder">Idioma</button>
-            </div>
-            <article class="maps_container ps-4 pe-4">
-                <img src="#" alt="imágen del mapa">
-            </article>
-        </section>
-        <nav class="nav_bar_maps">
-            <h1 class="title fs-2">Información de interés</h1>
-            <ul class="container_text_maps">
-                <li class="fs-4">Formas de llegar</li>
-                <li class="fs-4">Rutas</li>
-                <li class="fs-4">Pueblos cercanos</li>
-                <li class="fs-4">Paradas de transporte público cercanas</li>
-                <li class="fs-4">Etc.</li>
-            </ul>
-        </nav>
+      <section class="container_info height">
+        <div class="container_button">
+          <button class="lang fw-bolder" onclick="history.back()">Atrás</button>
+          <button class="lang fw-bolder">Idioma</button>
+        </div>
+        <article class="maps_container ps-4 pe-4">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46635.327524976885!2d-2.2762851982018377!3d43.06860914737168!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd50322579961d03%3A0xddf2af30ea88ad7c!2s20709%20Ezquioga-Ichaso%2C%20Gipuzkoa!5e0!3m2!1ses!2ses!4v1642686903523!5m2!1ses!2ses"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+          ></iframe>
+        </article>
+      </section>
+      <ol id="info" class="h-100 p-0 m-0">
+        <li>
+          <h1 class="title text-center">Información de interés</h1>
+          <ul class="container_text_maps">
+            <li>Formas de llegar: <br /><span class="color">Bus</span></li>
+            <li>Rutas: <br /><span class="color">xxxxx</span></li>
+            <li>Pueblos cercanos: <br /><span class="color">xxxxx</span></li>
+            <li>
+              Paradas de transporte público cercanas: <br /><span class="color"
+                >xxxxx</span
+              >
+            </li>
+            <li>Etc.</li>
+          </ul>
+        </li>
+      </ol>
     </div>
-</body>
+  </body>
 </html>
