--- a/html/mandubi/galeriaVR.html
+++ b/html/mandubi/galeriaVR.html
@@ -24,32 +24,32 @@
     <!-- Panel Galería de imágenes -->
     <div class="flex_container">
       <section
-        class="container_info container_info_maps ps-sm-0 pe-sm-0"
+        class="container_info container_info_galery"
       >
         <!-- botones -->
-        <div class="d-flex justify-content-between">
-          <div class="container-button">
-            <button class="lang fs-5 fw-bolder" onclick="history.back()">
+        <div id="buttonVr" class="d-flex justify-content-between">
+          <div class="container-button-vr">
+            <button class="lang fw-bolder" onclick="history.back()">
               Atrás
             </button>
-            <button class="lang fs-5 fw-bolder">Idioma</button>
+            <button class="lang fw-bolder">Idioma</button>
           </div>
-          <div id="hidden" class="container-button">
+          <div id="hidden" class="container-button-vr">
             <button
-              class="lang fs-5 fw-bolder pause"
+              class="lang fw-bolder pause"
               type="button"
               value="pause"
               onclick="pauseAndPlay()"
             >
               Play
             </button>
-            <button class="lang fs-5 fw-bolder" onclick="reset()">Reset</button>
+            <button class="lang fw-bolder" onclick="reset()">Reset</button>
           </div>
         </div>
         <!-- contenedor de imagen central -->
-        <article class="contenedor mt-0 ps-4 pe-4">
+        <article class="contenedor ps-4 pe-4">
           <!--contenedor de modelo 3D-->
-          <div class="img-ampliada slider">
+          <div class="img-ampliada">
             <model-viewer
               id="imgGalery"
               class="Model3d"
@@ -143,21 +143,19 @@
           </div>
         </article>
       </section>
-      <nav class="nav_bar_maps">
-        <h1
-          class="title fs-2 me-0 ms-0 pb-3 mb-2 border-bottom border-white border-3 d-flex justify-content-center align-items-center"
-        >
-          Información de interés
-        </h1>
-        <ul class="container_text_maps">
-          <li class="fs-4">Nombre Barca</li>
-          <li class="fs-4">Tamaño</li>
-          <li class="fs-4">Fecha</li>
-          <li class="fs-4">Material</li>
-          <li class="fs-4">Utilidad</li>
-          <li class="fs-4">...</li>
-        </ul>
-      </nav>
+      <ol id="info" class="h-100 p-0 m-0">
+        <li>
+            <h1 class="title text-center">Información de interés</h1>
+            <ul class="container_text_maps">
+                <li>Nombre: <br><span class="color">Barca</span></li>
+                <li>Tamaño: <br><span class="color">3 metros</span></li>
+                <li>Fecha: <br><span class="color">20/03/1720</span></li>
+                <li>Material: <br><span class="color">Piedra</span></li>
+                <li>Utilidad: <br><span class="color">desconocida</span></li>
+                <li>...</li>
+            </ul>
+        </li>
+    </ol>
     </div>
     <script src="../../js/main.js"></script>
     <!-- libreria  para model viewer -->
