--- a/html/mandubi/mapa.html
+++ b/html/mandubi/mapa.html
@@ -15,16 +15,21 @@
 <body>
     <!-- Panel mapa mandubi -->
     <div class="flex_container">
-        <section class="container_info">
+        <section class="container_info height">
             <div class="container_button">
                 <button class="lang fw-bolder" onclick="history.back()">Atrás</button>
                 <button class="lang fw-bolder">Idioma</button>
             </div>
             <article class="maps_container ps-4 pe-4">
-                <img src="#" alt="imágen del mapa">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46635.327524976885!2d-2.2762851982018377!3d43.06860914737168!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd50322579961d03%3A0xddf2af30ea88ad7c!2s20709%20Ezquioga-Ichaso%2C%20Gipuzkoa!5e0!3m2!1ses!2ses!4v1642686903523!5m2!1ses!2ses"
+                    style="border: 0"
+                    allowfullscreen=""
+                    loading="lazy"
+                ></iframe>
             </article>
         </section>
-        <nav class="nav_bar">
+        <nav id="nav_bar_small" class="nav_bar">
             <ol id="buttom_360" class="p-0 m-0">
                 <li class="button_nav_bar"><a href="img360.html">Recorrido 360º</a></li>
             </ol>
@@ -33,10 +38,10 @@
             <li>
                 <h1 class="title text-center">Información de interés</h1>
                 <ul class="container_text_maps">
-                    <li>Formas de llegar</li>
-                    <li>Rutas</li>
-                    <li>Pueblos cercanos</li>
-                    <li>Paradas de transporte público cercanas</li>
+                    <li>Formas de llegar: <br><span class="color">Bus</span></li>
+                    <li>Rutas: <br><span class="color">xxxxx</span></li>
+                    <li>Pueblos cercanos: <br><span class="color">xxxxxx</span></li>
+                    <li>Paradas de transporte público cercanas: <br><span class="color">xxxxxx</span></li>
                     <li>Etc.</li>
                 </ul>
             </li>
