--- a/html/mandubi/galeria.html
+++ b/html/mandubi/galeria.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&family=Roboto:wght@500&display=swap" rel="stylesheet">
 </head>
-<body>
+<body onload="cargarCarousel()">
     <!-- Panel Galería de imágenes -->
     <div class="flex_container">
         <section class="container_info container_info_galery">
