--- a/html/mandubi/galeriaVR.html
+++ b/html/mandubi/galeriaVR.html
@@ -20,7 +20,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body onload="cargarCarousel()">
     <!-- Panel Galería de imágenes -->
     <div class="flex_container">
       <section
